--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/habu289.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs              : # true, false (default)
+breadcrumbs              : true # , false (default)
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
@@ -116,7 +116,7 @@ author:
   name             : "HABU"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "TIL"
-  location         : ""
+  location         : # ""
   email            :
   links:
     - label: "Email"
